package com.caibowen.prma.api.proto;

message StackTracePO {
    required string file_name = 1;
    required string function_name = 2;
    optional string class_name = 3;
    required uint32 line_number = 4;
}